clean up more tests (#4482)
Co-authored-by: Andrey Strukov <andrey.strukov@codecentric.de>